<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DeepSkyBlue" >
    
    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button_on_press"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"   
        android:drawableLeft="@drawable/ic_arrow_left"
        android:drawablePadding="4dp"
        android:text="@string/person_info"
        android:textSize="@dimen/titleSize"/>

    <ScrollView 
	    android:layout_marginTop="@dimen/abc_action_bar_default_height"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/white" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:orientation="vertical" >

	        <RelativeLayout
		        android:id="@+id/layout_name"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp" >
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:textSize="18sp"
		            android:text="@string/nick_name" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/username"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="20dp"
		            android:drawablePadding="10dp"
		            android:textSize="18sp" />
    		</RelativeLayout>
    		
	        <View
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="@color/light_gray" >
		    </View>
    
	        <RelativeLayout
		        android:id="@+id/layout_gender"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp" >
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:textSize="18sp"
		            android:text="@string/gender" />
		
		        <TextView
		            android:id="@+id/gender"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="20dp"
		            android:drawablePadding="10dp"
		            android:textSize="18sp" />
    		</RelativeLayout>
    		
	        <View
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="@color/light_gray" >
		    </View>
	        
	        <Button
	            android:id="@+id/begin_chat"
	            android:layout_width="fill_parent"
				android:layout_height="50dp"
				android:visibility="gone"
				android:layout_marginTop="15dp"
				android:background="@drawable/button_on_press"
				android:textColor="#ffffff"
				android:text="@string/begin_chat" />
	        
	        <Button
	            android:id="@+id/delete_friend"
	            android:layout_width="fill_parent"
				android:layout_height="50dp"
				android:visibility="gone"
				android:layout_marginTop="15dp"
				android:background="@drawable/button_on_press"
				android:textColor="#ffffff"
				android:text="@string/delete_friend" />
	    </LinearLayout>
	
	</ScrollView>
</RelativeLayout>
	        