<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DeepSkyBlue" >
    
    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button_on_press"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"   
        android:drawableLeft="@drawable/ic_arrow_left"
        android:drawablePadding="4dp"
        android:text="@string/register"
        android:textSize="16sp"/>
    
	<ScrollView 
	    android:layout_marginTop="@dimen/abc_action_bar_default_height"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/white" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
        	android:layout_marginTop="20dp"
        	android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
	        android:orientation="vertical" >
	        
	        <LinearLayout
	             android:id="@+id/id_input_group"
	             android:layout_width="fill_parent"
	             android:layout_height="wrap_content"
	             android:orientation="vertical" >
	
	             <EditText
	                 android:id="@+id/userName"
	                 android:layout_width="fill_parent"
	                 android:layout_height="wrap_content"
	                 android:hint="@string/nick_name"
	                 android:singleLine="true" />
	
	             <RelativeLayout 
	                 android:layout_width="fill_parent"
	                 android:layout_height="wrap_content"
	                 android:gravity="center_vertical"
	                 android:layout_marginTop="10dp">
	                 
	                 <EditText
		                 android:id="@+id/passwd"
		                 android:layout_width="fill_parent"
		                 android:layout_height="wrap_content"
		                 android:hint="@string/password"
		                 android:inputType="textPassword"
		                 android:singleLine="true" />
	                 
	                 <ToggleButton
	                     android:id="@+id/isShowPassword"
	                     android:layout_height="20dp"
	                     android:layout_width="40dp"
	                     android:layout_alignParentRight="true"
	                     android:background="@drawable/password_toggle"
	                     android:layout_marginTop="5dp"
	                     android:layout_marginRight="5dp"
	                     android:textOff=""
	                     android:textOn="" />
             	</RelativeLayout>
	         </LinearLayout>
	
	         <Button
	             android:id="@+id/btn_register"
	             android:layout_width="fill_parent"
	             android:layout_height="50dp"
	             android:layout_marginTop="15dp"
	             android:background="@drawable/button_on_press"
	             android:textColor="#ffffff"
	             android:text="@string/register" />
	    </LinearLayout>
	
	</ScrollView>
</RelativeLayout>
