<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DeepSkyBlue" >
    
    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button_on_press"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"   
        android:drawableLeft="@drawable/ic_arrow_left"
        android:drawablePadding="4dp"
        android:text="@string/add_friend"
        android:textSize="@dimen/titleSize"/>
    
    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:background="@color/white"
	    android:layout_marginTop="@dimen/abc_action_bar_default_height" >
	    
        <EditText 
	        android:id="@+id/search_name"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
		    android:paddingLeft="15dp"
		    android:paddingRight="40dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/search_name"
	        android:singleLine="true" />
	    
	    <ImageView 
	        android:id="@+id/search_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_search"
	        android:layout_alignParentRight="true"
	        android:padding="2dp"
	        android:layout_marginRight="15dp"
	        android:background="@drawable/button_transparent_on_press" />
    </RelativeLayout>

    
    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/white"
		android:layout_below="@id/search_layout" >
	    
	    <RelativeLayout 
	        android:id="@+id/new_friend"
	        android:visibility="gone"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:background="@drawable/button_transparent_on_press" >
    		
		    <ImageView
		        android:id="@+id/avatar"
		        android:layout_width="80dp"
		        android:layout_height="80dp"
		        android:layout_marginLeft="10dp"
		        android:padding="5dp"
		        android:src="@drawable/ic_default_avatar" />
		    
		    <TextView 
		        android:id="@+id/name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/avatar"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:textSize="18sp"
		        android:text="@string/new_friend" />
		    
		    <Button 
		        android:id="@+id/add_btn" 
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:text="添加"
		        android:textColor="@color/white"
		        android:background="@drawable/button_on_press"/>
		   
	   </RelativeLayout>
	
	</RelativeLayout>
    
</RelativeLayout>
